<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.topog.planetplay.CreateAccount">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="264dp"
        android:layout_height="113dp"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        android:scaleType="centerInside"
        app:srcCompat="@drawable/planetplay"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="0dp" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/user_name" />


    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/user_name"
        android:layout_alignStart="@+id/user_name" />

    <EditText
        android:id="@+id/user_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_name"
        android:layout_alignBottom="@+id/user_name"
        android:layout_alignLeft="@+id/user_name"
        android:layout_alignStart="@+id/user_name"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/password1"
        android:layout_below="@+id/email2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email2"
        android:layout_alignRight="@+id/email2"
        android:layout_below="@+id/Password"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirmpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/confirm_password"
        android:layout_below="@+id/password2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password2"
        android:layout_alignStart="@+id/password2"
        android:layout_below="@+id/confirmpass"
        android:ems="10"
        android:inputType="textPassword"
        android:id="@+id/confirm" />

    <Button
        android:id="@+id/Create_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Click"
        android:text="@string/create_account1"
        android:layout_below="@+id/confirm"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
