<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="Create_Account"
    tools:context="com.example.topog.planetplay.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="264dp"
        android:layout_height="113dp"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        android:scaleType="centerInside"
        app:srcCompat="@drawable/planetplay"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="18dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_name"
        android:layout_alignStart="@+id/user_name"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/login"
        android:textSize="10sp"
        android:onClick="Login"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/Create_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:onClick="Create_Account"
        android:text="@string/create_account"
        android:textSize="10sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_marginTop="10dp"
        tools:ignore="SmallSp" />

</RelativeLayout>
